--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+*Double click/Enter to play and click to just select
 *Add download again and remove file to podcasts popup menu
 *Write Id3 tags to files (write library)
 *Implement search capabilities
